@@ -10,9 +10,6 @@
 /* dynamic relocation? */
 #define ARGV0_RELOCATION 0
 
-/* framework prefix, usually ".." */
-#define FRAMEWORKDIR "@FRAMEWORKDIR@"
-
 /* default lilypond locale dir */
 #define LOCALEDIR "@LOCALEDIR@"
 
